[package]
name = "server"
version = "0.1.0"
authors = ["amoshi <amoshi.mandrakeuser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
log = "0.4"
metrics = "0.14.2"
