[package]
name = "server"
version = "0.1.0"
authors = ["amoshi <amoshi.mandrakeuser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
warp = { version = "0.2.5", features = ["compression"] }
futures = "0.3"
console = "0.9.1"
