[package]
name = "server"
version = "0.1.0"
authors = ["amoshi <amoshi.mandrakeuser@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.1", features = ["compression", "tls"] }
console = "0.9.1"
tokio = { version = "1.12.0", features = ["full"] }
thread-id = { version = "4.0.0" }
futures = { version = "0.3" }
config = { version = "0.11.0" }
serde = { version = "1.0.130", features = ["derive"] }
