[package]
name = "server"
version = "0.1.0"
authors = ["amoshi <amoshi.mandrakeuser@gmail.com>"]
edition = "2018"
description = "server"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.1", features = ["compression", "tls"] }
console = "0.9.1"
tokio = { version = "1.12.0", features = ["full"] }
thread-id = { version = "4.0.0" }
futures = { version = "0.3" }
config = { version = "0.11.0" }
serde = { version = "1.0.130", features = ["derive"] }
rustls-pemfile = { version = "0.2.1" }
tokio-rustls = { version = "0.23.0" }
lazy_static = { version = "1.4.0" }

[package.metadata.rpm]
package = "server"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
server = { path = "/usr/bin/server" }
