[package]
name = "server"
version = "0.1.0"
authors = ["amoshi <amoshi.mandrakeuser@gmail.com>"]
edition = "2018"
description = "server"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#warp = { version = "0.3.1", features = ["compression", "tls"] }
#console = "0.9.1"
tokio = { version = "1.12.0", features = ["full"] }
thread-id = { version = "4.0.0" }
futures = { version = "0.3" }
hyper = { version = "0.14", features = ["full"] }
rand = "*"
#config = { version = "0.11.0" }
#serde = { version = "1.0.130", features = ["derive"] }
#serde_json = { version = "1.0.70" }
#rustls-pemfile = { version = "0.2.1" }
#tokio-rustls = { version = "0.23.0" }
#lazy_static = { version = "1.4.0" }
#prometheus = { version = "0.13.0" }
#syslog_loose = { version = "0.15.0" }
socket2 = { version = "0.3.19" }
#hostname = { version = "0.3.0" }
#num = "*"
#num-traits = "*"
#num-integer = "*"
#num-bigint = "*"
